--- a/OurCity/OurCity.vcxproj.filters
+++ b/OurCity/OurCity.vcxproj.filters
@@ -92,6 +92,9 @@
     <ClInclude Include="AppTime.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Tile.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="myFrag.frag">
