--- a/OurCity/OurCity.vcxproj
+++ b/OurCity/OurCity.vcxproj
@@ -156,30 +156,39 @@
     <ClCompile Include="AppTime.cpp" />
     <ClCompile Include="Building.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Factory.cpp" />
     <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="GLDebugMessageCallback.cpp" />
+    <ClCompile Include="House.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MouseController.cpp" />
     <ClCompile Include="MyApp.cpp" />
+    <ClCompile Include="ServiceBuilding.cpp" />
     <ClCompile Include="SubMap.cpp" />
     <ClCompile Include="TileRect.cpp" />
     <ClCompile Include="Window.cpp" />
+    <ClCompile Include="Workplace.cpp" />
     <ClCompile Include="World.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AppTime.h" />
     <ClInclude Include="Building.h" />
+    <ClInclude Include="BuildingsInclude.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Factory.h" />
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="GLDebugMessageCallback.h" />
     <ClInclude Include="GLUtils.hpp" />
+    <ClInclude Include="House.h" />
     <ClInclude Include="MouseController.h" />
     <ClInclude Include="MyApp.h" />
+    <ClInclude Include="ServiceBuilding.h" />
     <ClInclude Include="SubMap.h" />
     <ClInclude Include="Tile.h" />
     <ClInclude Include="TileRect.h" />
     <ClInclude Include="Vector.h" />
     <ClInclude Include="Window.h" />
+    <ClInclude Include="Workplace.h" />
     <ClInclude Include="World.h" />
   </ItemGroup>
   <ItemGroup>
