--- a/OurCity/imgui.ini
+++ b/OurCity/imgui.ini
@@ -8,3 +8,18 @@ Pos=23,381
 Size=550,680
 Collapsed=0
 
+[Options]
+Pos=60,60
+Size=86,81
+Collapsed=0
+
+[Time]
+Pos=60,60
+Size=229,35
+Collapsed=0
+
+[Zones]
+Pos=60,60
+Size=278,35
+Collapsed=0
+
