--- a/OurCity/OurCity.vcxproj
+++ b/OurCity/OurCity.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Factory.cpp" />
     <ClCompile Include="GameScene.cpp" />
+    <ClCompile Include="GameTime.cpp" />
     <ClCompile Include="GLDebugMessageCallback.cpp" />
     <ClCompile Include="House.cpp" />
     <ClCompile Include="include\imgui\imgui.cpp" />
@@ -188,6 +189,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Factory.h" />
     <ClInclude Include="GameScene.h" />
+    <ClInclude Include="GameTime.h" />
     <ClInclude Include="GLDebugMessageCallback.h" />
     <ClInclude Include="GLUtils.hpp" />
     <ClInclude Include="House.h" />
