--- a/OurCity/OurCity.vcxproj
+++ b/OurCity/OurCity.vcxproj
@@ -158,9 +158,12 @@
     <ClCompile Include="Building.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Factory.cpp" />
+    <ClCompile Include="FireStation.cpp" />
+    <ClCompile Include="Forest.cpp" />
     <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="GameTime.cpp" />
     <ClCompile Include="GLDebugMessageCallback.cpp" />
+    <ClCompile Include="HighSchool.cpp" />
     <ClCompile Include="House.cpp" />
     <ClCompile Include="include\imgui\imgui.cpp" />
     <ClCompile Include="include\imgui\imgui_demo.cpp" />
@@ -169,13 +172,17 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MouseController.cpp" />
     <ClCompile Include="MyApp.cpp" />
+    <ClCompile Include="PoliceStation.cpp" />
     <ClCompile Include="Resident.cpp" />
     <ClCompile Include="Road.cpp" />
     <ClCompile Include="RoadGraph.cpp" />
+    <ClCompile Include="School.cpp" />
     <ClCompile Include="ServiceBuilding.cpp" />
     <ClCompile Include="SpecialBuilding.cpp" />
+    <ClCompile Include="Stadium.cpp" />
     <ClCompile Include="SubMap.cpp" />
     <ClCompile Include="TileRect.cpp" />
+    <ClCompile Include="University.cpp" />
     <ClCompile Include="Window.cpp" />
     <ClCompile Include="Workplace.cpp" />
     <ClCompile Include="World.cpp" />
@@ -188,10 +195,13 @@
     <ClInclude Include="BuildingsInclude.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Factory.h" />
+    <ClInclude Include="FireStation.h" />
+    <ClInclude Include="Forest.h" />
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="GameTime.h" />
     <ClInclude Include="GLDebugMessageCallback.h" />
     <ClInclude Include="GLUtils.hpp" />
+    <ClInclude Include="HighSchool.h" />
     <ClInclude Include="House.h" />
     <ClInclude Include="include\imgui\imconfig.h" />
     <ClInclude Include="include\imgui\imgui.h" />
@@ -199,13 +209,17 @@
     <ClInclude Include="include\imgui\imgui_internal.h" />
     <ClInclude Include="MouseController.h" />
     <ClInclude Include="MyApp.h" />
+    <ClInclude Include="PoliceStation.h" />
     <ClInclude Include="Resident.h" />
     <ClInclude Include="Road.h" />
     <ClInclude Include="RoadGraph.h" />
+    <ClInclude Include="School.h" />
     <ClInclude Include="ServiceBuilding.h" />
     <ClInclude Include="SpecialBuilding.h" />
+    <ClInclude Include="Stadium.h" />
     <ClInclude Include="SubMap.h" />
     <ClInclude Include="TileRect.h" />
+    <ClInclude Include="University.h" />
     <ClInclude Include="Vector.h" />
     <ClInclude Include="Window.h" />
     <ClInclude Include="Workplace.h" />
