--- a/OurCity/imgui.ini
+++ b/OurCity/imgui.ini
@@ -10,16 +10,21 @@ Collapsed=0
 
 [Options]
 Pos=0,0
-Size=86,81
+Size=111,96
 Collapsed=0
 
 [Time]
-Pos=1306,0
-Size=229,69
+Pos=1236,0
+Size=294,84
 Collapsed=0
 
 [Zones]
-Pos=628,721
-Size=278,35
+Pos=628,713
+Size=362,40
+Collapsed=0
+
+[Main Menu]
+Pos=395,395
+Size=72,68
 Collapsed=0
 
