--- a/OurCity/OurCity.vcxproj
+++ b/OurCity/OurCity.vcxproj
@@ -161,6 +161,7 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Factory.cpp" />
     <ClCompile Include="FireStation.cpp" />
+    <ClCompile Include="FireTruck.cpp" />
     <ClCompile Include="Forest.cpp" />
     <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="GameState.cpp" />
@@ -200,6 +201,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Factory.h" />
     <ClInclude Include="FireStation.h" />
+    <ClInclude Include="FireTruck.h" />
     <ClInclude Include="Forest.h" />
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="GameState.h" />
