--- a/OurCity/OurCity.vcxproj.filters
+++ b/OurCity/OurCity.vcxproj.filters
@@ -117,28 +117,31 @@
     <ClCompile Include="ResidentManager.cpp">
       <Filter>Source Files\Resident</Filter>
     </ClCompile>
-    <ClCompile Include="FireStation.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Forest.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="GameState.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Forest.cpp">
+      <Filter>Source Files\Buildings</Filter>
+    </ClCompile>
     <ClCompile Include="HighSchool.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="PoliceStation.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="School.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Buildings</Filter>
     </ClCompile>
     <ClCompile Include="Stadium.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Buildings</Filter>
+    </ClCompile>
+    <ClCompile Include="School.cpp">
+      <Filter>Source Files\Buildings</Filter>
+    </ClCompile>
+    <ClCompile Include="FireStation.cpp">
+      <Filter>Source Files\Buildings</Filter>
     </ClCompile>
     <ClCompile Include="University.cpp">
+      <Filter>Source Files\Buildings</Filter>
+    </ClCompile>
+    <ClCompile Include="PoliceStation.cpp">
+      <Filter>Source Files\Buildings</Filter>
+    </ClCompile>
+    <ClCompile Include="FireTruck.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -233,28 +236,31 @@
     <ClInclude Include="ResidentManager.h">
       <Filter>Header Files\Resident</Filter>
     </ClInclude>
-    <ClInclude Include="FireStation.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Forest.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="GameState.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FireStation.h">
+      <Filter>Header Files\Buildings</Filter>
+    </ClInclude>
+    <ClInclude Include="Forest.h">
+      <Filter>Header Files\Buildings</Filter>
+    </ClInclude>
     <ClInclude Include="HighSchool.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Buildings</Filter>
     </ClInclude>
     <ClInclude Include="PoliceStation.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Buildings</Filter>
     </ClInclude>
     <ClInclude Include="School.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Buildings</Filter>
     </ClInclude>
     <ClInclude Include="Stadium.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Buildings</Filter>
     </ClInclude>
     <ClInclude Include="University.h">
+      <Filter>Header Files\Buildings</Filter>
+    </ClInclude>
+    <ClInclude Include="FireTruck.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
