--- a/OurCity/imgui.ini
+++ b/OurCity/imgui.ini
@@ -1,5 +1,5 @@
 [Debug##Default]
-Pos=478,88
+Pos=-50,0
 Size=212,65
 Collapsed=0
 
@@ -25,6 +25,11 @@ Collapsed=0
 
 [Main Menu]
 Pos=350,350
-Size=116,90
+Size=800,800
+Collapsed=0
+
+[Menu]
+Pos=60,60
+Size=800,800
 Collapsed=0
 
