--- a/OurCity/imgui.ini
+++ b/OurCity/imgui.ini
@@ -10,26 +10,31 @@ Collapsed=0
 
 [Options]
 Pos=0,0
-Size=111,96
+Size=165,126
 Collapsed=0
 
 [Time]
 Pos=1236,0
-Size=294,84
+Size=241,114
 Collapsed=0
 
 [Zones]
 Pos=628,713
-Size=362,40
+Size=503,50
 Collapsed=0
 
 [Main Menu]
-Pos=350,350
-Size=800,800
+Pos=718,396
+Size=131,110
 Collapsed=0
 
 [Menu]
 Pos=60,60
 Size=800,800
+Collapsed=0
+
+[Text]
+Pos=518,196
+Size=800,500
 Collapsed=0
 
