Tűz: lásd leírás
GameScene update-je kezeli a tűzeseteket.
Tűz osztály + valamennyire kidolgozott függvényei
Egyelőre csak lakóházak és munkahelyek gyulladnak ki.
Tüzeket a World tartalmazza
Tüzeket secondary render pass rendereli, minden fölé kerül
Tűzre kattintva a tűz kialszik, törlődik world-ből, helyesen reseltel minden.

TODO:
Tűz egy idő után leég, ekkor a ház és a hozzá tartozó dolgok update-elődnek. (World updateFires)
Tűz terjed. (Fire propagate)
Spec épületek is gyulladhassanak ki.
Tűzoltóautó.

--- a/OurCity/OurCity.vcxproj
+++ b/OurCity/OurCity.vcxproj
@@ -162,6 +162,7 @@
     <ClCompile Include="Building.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Factory.cpp" />
+    <ClCompile Include="Fire.cpp" />
     <ClCompile Include="FireStation.cpp" />
     <ClCompile Include="FireTruck.cpp" />
     <ClCompile Include="Forest.cpp" />
@@ -203,6 +204,7 @@
     <ClInclude Include="BuildingsInclude.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Factory.h" />
+    <ClInclude Include="Fire.h" />
     <ClInclude Include="FireStation.h" />
     <ClInclude Include="FireTruck.h" />
     <ClInclude Include="Forest.h" />
