--- a/OurCity/OurCity.vcxproj
+++ b/OurCity/OurCity.vcxproj
@@ -255,6 +255,7 @@
     <ClCompile Include="SpecialBuilding.cpp" />
     <ClCompile Include="Stadium.cpp" />
     <ClCompile Include="SubMap.cpp" />
+    <ClCompile Include="test.cpp" />
     <ClCompile Include="TileRect.cpp" />
     <ClCompile Include="University.cpp" />
     <ClCompile Include="Window.cpp" />
