--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ build:
   script:
     - mkdir build
     - cd build
-    - g++ ..OurCity/*.cpp -D TESTING -w -o ourcity
+    - g++ ../OurCity/*.cpp -D TESTING -w -o ourcity
     - cd ..
 
 # run tests using the binary built before
