Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,9 +25,7 @@ build:
   #   - apt update && apt -y install make autoconf
   script:
     - mkdir build
-    - cd build
-    - g++ ../OurCity/*.cpp -D TESTING -w -o ourcity
-    - cd ..
+    - g++ ./OurCity/*.cpp -D TESTING -w -o ./build/ourcity
 
 # run tests using the binary built before
 test:
