Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,9 @@ build:
   # before_script:
   #   - apt update && apt -y install make autoconf
   script:
+    - cd ./OurCity
     - ls
+    - cd ..
     - mkdir build
     - g++ ./OurCity/*.cpp -D TESTING -w -o ./build/ourcity
 
