--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,10 +24,12 @@ build:
   # before_script:
   #   - apt update && apt -y install make autoconf
   script:
-    - g++ ./OurCity/*.cpp -D TESTING -w 
+    - mkdir build
+    - g++ ./OurCity/*.cpp -D TESTING -w -o ./build/ourcity
 
 # run tests using the binary built before
 test:
   stage: test
   script:
+    - cd ./build
     - ./ourcity
