--- a/OurCity/imgui.ini
+++ b/OurCity/imgui.ini
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Options]
 Pos=0,0
-Size=86,81
+Size=121,104
 Collapsed=0
 
 [Time]
@@ -21,5 +21,10 @@ Collapsed=0
 [Zones]
 Pos=260,720
 Size=278,35
+Collapsed=0
+
+[Zone Stat]
+Pos=60,60
+Size=58,54
 Collapsed=0
 
