--- a/OurCity/imgui.ini
+++ b/OurCity/imgui.ini
@@ -10,21 +10,31 @@ Collapsed=0
 
 [Options]
 Pos=0,0
-Size=86,81
+Size=145,114
 Collapsed=0
 
 [Time]
-Pos=1306,0
-Size=229,69
+Pos=1321,0
+Size=217,102
 Collapsed=0
 
 [Zones]
 Pos=628,713
-Size=278,35
+Size=443,46
 Collapsed=0
 
 [Zone Stat]
 Pos=718,346
 Size=217,116
+Collapsed=0
+
+[Text]
+Pos=150,200
+Size=850,600
+Collapsed=0
+
+[Main Menu]
+Pos=350,400
+Size=131,110
 Collapsed=0
 
