--- a/OurCity/OurCity.vcxproj.filters
+++ b/OurCity/OurCity.vcxproj.filters
@@ -162,6 +162,9 @@
     <ClCompile Include="Helicopter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="DayNight.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h">
@@ -297,6 +300,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Helicopter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DayNight.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
